--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-size: 10pt;
             line-height: 1.6;
             color: #000000;
-            background-color: #ffffff;
+            background-color: #fffef7;
             max-width: 600px;
             margin: 0 auto;
             padding: 40px 20px;
